libtlafmt/tests/snapshots/format__corpus@MCKVS.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCKVS.tla
---
--------------------------------- MODULE MCKVS ---------------------------------
EXTENDS KeyValueStore, TLC
TxIdSymmetric == Permutations(TxId)
================================================================================
