libtlafmt/tests/snapshots/format__corpus@MCMajority.tla.snap
---
source: libtlafmt/tests/format.rs
expression: output
input_file: libtlafmt/tests/corpus/MCMajority.tla
---
------------------------------ MODULE MCMajority -------------------------------
(****************************************************************************)
(* TLA+ module for model checking the majority vote algorithm for all       *)
(* sequences over three elements of bounded length.                         *)
(****************************************************************************)
EXTENDS Integers
CONSTANTS A, B, C, bound
ASSUME bound \in Nat

Value == {A, B, C}
BoundedSeq(S) == UNION {[1..n -> S]: n \in 0..bound}

VARIABLES seq, i, cand, cnt

INSTANCE Majority

================================================================================
